--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,61 +1,117 @@
-{%extends "bootstrap/base.html"%}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    {% block head %}
+    <meta charset="UTF-8">
+    <!--        <link rel="shortcut icon" href="{{ url_for('static', filename = 'favicon.ico') }}" type="image/x-icon">-->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+          integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="/static/css/main.css">
+    <title>{% block title %}Trip.cat{% endblock %}</title>
+    {% endblock %}
+</head>
 
-{%block title%}Trip.cat{% endblock %}
+<body>
 
-{% block head %}
-	{{ super() }}
-	<link rel="shortcut icon" href="{{url_for('static', filename = 'favicon.ico')}}" type="image/x-icon">
+{% block navbar %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+            <a class="nav-link" href="/">Главная</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="login">Вход</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="registration">Регистрация</a>
+        </li>
+    </ul>
+</nav>
 {% endblock %}
-
-
-{%block navbar%}
-<div class="navbar navbar-inverse" role="navigation">
-	<div class="container">
-		<div class="navbar-header">
-			<button type="button" class="navbar-toggle"
-			data-toggle="collapse" data-target=".navbar-collapse">
-				<span class="sr-only">Toggle navigation</span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-				<span class="icon-bar"></span>
-			</button>
-			<a class="navbar-brand" href="/">Главная</a>
-		</div>
-		<div class="navbar-collapse collapse">
-			<ul class="nav navbar-nav">
-				{%if known == True and admin == False%}
-				<li><a href="#">Личный кабинет {%if name != None%}{{name}}{%endif%}</a></li>
-				{%endif%}
-				{%if known == True%}
-			    <li><a href="#">События</a></li>
-				<li><a href="#">Выход</a></li>
-				{% else %}
-			    <li><a href="login">Вход</a></li>
-				<li><a href="registration">Регистрация</a></li>
-				{%endif%}				
-			</ul>
-		</div>
-	</div>
-</div>
-{%endblock%}
 
 {% block content %}
 <div class="container">
-    {% for message in get_flashed_messages() %}
-    <div class="alert alert-warning">
-        <button type="button" class="close" data-dismiss="alert">&times;</button>
-        {{ message }}
-    </div>
-    {% endfor %}
-
     {% block page_content %}
-        <h1>Home page</h1>
+    <h1>Home page</h1>
+
+    <!-- MultiStep Form -->
+    <div class="my-flex-column">
+        <div class="col-md-6 col-md-offset-3">
+            <form id="msform">
+                <!-- progressbar -->
+                <ul id="progressbar">
+                    <li class="active">Направление туризма</li>
+                    <li>Регион и дата</li>
+                    <li>Снаряжение</li>
+                </ul>
+                <!-- fieldsets -->
+                <fieldset class="d-flex flex-column">
+                    <h2 class="fs-title">Направление туризма</h2>
+                    <h3 class="fs-subtitle">Выберите интересующее вас направление</h3>
+
+                    <div class="flex-row d-flex justify-content-around align-items-center">
+                        <label for="start_date">С: </label>
+                        <input type="date" id="start_date">
+
+                        <label for="end_date">По: </label>
+                        <input type="date" id="end_date">
+                    </div>
+
+                    <div class="flex-row d-flex justify-content-around align-items-center">
+                        <label for="list">Стихия: </label>
+                        <select id="list">
+                            <option value="earth">Земля</option>
+                            <option value="mountain">Горы</option>
+                            <option value="air">Воздух</option>
+                            <option value="water">Вода</option>
+                        </select>
+                    </div>
+
+                    <div class="flex-row d-flex justify-content-around align-items-center">
+                        <label for="region">Регион: </label>
+                        <select id="region">
+                            <option value="01">Республика Адыгея</option>
+                            <option value="02">Республика Башкортостан</option>
+                            <option value="03">Республика Бурятия</option>
+                            <option value="04">Республика Алтай</option>
+                        </select>
+                    </div>
+                    
+                    <input type="button" name="next" class="next action-button" value="Next"/>
+                </fieldset>
+                <fieldset>
+                    <h2 class="fs-title">Social Profiles</h2>
+                    <h3 class="fs-subtitle">Your presence on the social network</h3>
+                    <input type="text" name="twitter" placeholder="Twitter"/>
+                    <input type="text" name="facebook" placeholder="Facebook"/>
+                    <input type="text" name="gplus" placeholder="Google Plus"/>
+                    <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
+                    <input type="button" name="next" class="next action-button" value="Next"/>
+                </fieldset>
+                <fieldset>
+                    <h2 class="fs-title">Create your account</h2>
+                    <h3 class="fs-subtitle">Fill in your credentials</h3>
+                    <input type="text" name="email" placeholder="Email"/>
+                    <input type="password" name="pass" placeholder="Password"/>
+                    <input type="password" name="cpass" placeholder="Confirm Password"/>
+                    <input type="button" name="previous" class="previous action-button-previous" value="Previous"/>
+                    <input type="submit" name="submit" class="submit action-button" value="Submit"/>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+    <!-- /.MultiStep Form -->
     {% endblock %}
 </div>
 {% endblock %}
 
-{% block scripts %}
-{#	{{super()}}#}
-{#	{{moment.include_moment()}}#}
-{#	{{moment.lang('ru')}}#}
-{% endblock  %}
+{% block scripts %}{% endblock %}
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src='http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.5/jquery-ui.min.js'></script>
+
+<script src="static/js/main.js"></script>
+
+</body>
+</html>
