--- a/app/templates/registration.html
+++ b/app/templates/registration.html
@@ -1,5 +1,18 @@
 {% extends 'base.html' %}
 
 {% block page_content %}
+
+<div class="my-flex-column">
     <h2>Registration page</h2>
+
+    <input type="text" id="name" placeholder="Введите имя" class="my-margin">
+    <input type="email" id="email" placeholder="Введите e-mail" class="my-margin">
+    <input type="password" id="pass" placeholder="Введите пароль" class="my-margin">
+
+    <form action="/" target="_self" class="my-button">
+        <button type="submit">Регистрация</button>
+    </form>
+
+</div>
+
 {% endblock %}
