--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -23,16 +23,12 @@
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				{%if known == True and admin == False%}
-				<li><a href="#">Личный кабинет {%if name != None%}{{name}}{%endif%}</a></li>
-				{%endif%}
-				{%if known == True%}
-			    <li><a href="#">События</a></li>
-				<li><a href="#">Выход</a></li>
-				{% else %}
-			    <li><a href="login">Вход</a></li>
-				<li><a href="registration">Регистрация</a></li>
-				{%endif%}				
+            {% if current_user.is_anonymous %}
+            <li><a href="{{ url_for('login') }}">Войти</a></li>
+			<li><a href="{{ url_for('register')}}">Регистрация</a></li>
+            {% else %}
+            <li><a href="{{ url_for('logout') }}">Выход</a></li>
+            {% endif %}			
 			</ul>
 		</div>
 	</div>
